# synecdoche

./: .vimrc  BoincChangesets.md  BuildLinux.md  BuildWindows.md  CMakeLists.txt  DataDirectoryChanges.md  DocumentationGuidelines.md  Doxyfile  FrequentlyAskedQuestions.md  INSTALL  InstallInstructions.md  Makefile.am  Makefile.incl  NEWS  ProjectCompatibilityMatrix.md  ProjectHome.md  ReleaseNotes.md  ReleasePlan.md  RoadMap.md  SynecdocheServer.md  TaskStates.md  compile  config.guess  config.h.cmakein  configure.ac  export-tarball  make_coverage  maybe-conf  missing  nightly-tarball  svnversion.cpp  version.bat  version.h  version.sh
branches/cmake/: CMakeLists.txt  Doxyfile  INSTALL  Makefile.incl  _autosetup  config.h.cmakein  configure.ac  version.bat  version.h
branches/unittest/: CMakeLists.txt  Makefile.am  test-test.cpp  version.h
client/: CMakeLists.txt  Makefile.am  Makefile.curl.am  acct_mgr.C  acct_mgr.h  acct_setup.C  acct_setup.h  app.C  app.h  app_control.C  app_graphics.C  app_start.C  auto_update.C  check_security.C  check_state.C  client_msgs.C  client_state.C  client_state.h  client_types.C  client_types.h  cpp.h  cpu_benchmark.h  cpu_sched.C  cs_account.C  cs_apps.C  cs_benchmark.C  cs_cmdline.C  cs_files.C  cs_platforms.C  cs_prefs.C  cs_scheduler.C  cs_statefile.C  cs_trickle.C  dhrystone.C  dhrystone2.C  dirs.cpp.in  dirs.h  file_names.C  file_names.h  file_xfer.C  (+38 more)
client/win/: boinc.exe.manifest  boinc_cli.rc  boinc_cli_2003.rc  boinc_cmd.rc  win_service.cpp
clientgui/: AccountInfoPage.cpp  AccountInfoPage.h  AccountKeyPage.cpp  AccountKeyPage.h  AccountManagerInfoPage.cpp  AccountManagerProcessingPage.cpp  AccountManagerProcessingPage.h  AccountManagerPropertiesPage.cpp  AdvancedFrame.cpp  AdvancedFrame.h  AlreadyAttachedPage.cpp  AlreadyAttachedPage.h  AlreadyExistsPage.cpp  AlreadyExistsPage.h  BOINCBaseFrame.cpp  BOINCBaseFrame.h  BOINCBaseView.cpp  BOINCBaseView.h  BOINCBaseWizard.cpp  BOINCBaseWizard.h  BOINCClientManager.cpp  BOINCClientManager.h  BOINCDialupManager.cpp  BOINCDialupManager.h  BOINCGUIApp.cpp  BOINCGUIApp.h  BOINCGUIApp.rc  BOINCListCtrl.cpp  BOINCListCtrl.h  BOINCTaskBar.cpp  BOINCTaskBar.h  BOINCTaskCtrl.cpp  BOINCWizards.h  BuildLayout.cpp  BuildLayout.h  CMakeLists.txt  CompletionErrorPage.cpp  CompletionErrorPage.h  CompletionPage.cpp  DlgAbout.cpp  (+91 more)
clientgui/common/: wxFlatNotebook.cpp  wxFlatNotebook.h  wxPieCtrl.cpp
clientgui/mac/: MacGUI.pch  MacSysMenu.cpp  Mac_GUI.cpp  SetVersion.C  SetupSecurity.cpp  SystemMenu.m  browser_safari.mm  config.h
clientgui/msw/: taskbarex.cpp  taskbarex.h
clientgui/res/: boinc.xpm  boincdisconnect.xpm  connect.xpm  macbadgemask.xpm  macdisconnectbadge.xpm  macsnoozebadge.xpm  mess.xpm  proj.xpm  result.xpm  seedamwizard.xpm  seedapwizard.xpm  synecdoche16x16x8.xpm  synecdoche_logo.xpm  warning.xpm  wizprogress01.xpm  wizprogress02.xpm  wizprogress03.xpm  wizprogress04.xpm  wizprogress06.xpm  wizprogress07.xpm  wizprogress08.xpm  wizprogress09.xpm  wizprogress10.xpm  wizprogress11.xpm  wizprogress12.xpm  xfer.xpm
clientgui/tests/: CMakeLists.txt  Makefile.am  TestBuildLayout.cpp  TestFormatString.cpp
lib/: CMakeLists.txt  Makefile.am  app_ipc.C  app_ipc.h  base64.h  boinc_cmd.C  boinc_win.h  common_defs.h  coproc.C  coproc.h  crypt.C  crypt.h  crypt_prog.C  diagnostics.C  diagnostics.h  diagnostics_win.C  diagnostics_win.h  error_numbers.h  filesys.C  filesys.h  gui_rpc_client.C  gui_rpc_client.h  gui_rpc_client_ops.C  gui_rpc_client_print.C  hostinfo.C  hostinfo.h  md5.c  md5_file.C  md5_file.h  mem_usage.C  mfile.C  mfile.h  miofile.C  miofile.h  miofile_wrap.h  msg_log.C  msg_log.h  msg_queue.C  msg_queue.h  network.C  (+27 more)
lib/mac/: QBacktrace.c  QBacktrace.h  QCrashReport.c  QTaskMemory.c
lib/tests/: Makefile.am  TestUtil.cpp
locale/client/: Makefile.am  nl.po
tests/: CMakeLists.txt  Makefile.am  TestMioFile.cpp  TestRunner.cpp  TestStrUtil.cpp  TestStrUtil.h  TestUtil.cpp  TestXmlParser.cpp  TestXmlWrite.cpp  Util.h
trunk/: CMakeLists.txt  COPYRIGHT  Doxyfile  INSTALL  Makefile.am  Makefile.incl  NEWS  _autosetup  config.h.cmakein  config.sub  configure.ac  depcomp  ltmain.sh  set-version  svnversion.cpp  testbase  version.bat  version.h  version.h.in  version.sh
trunk/api/: bmplib.C  boinc_api.C  boinc_gl.h  boinc_glut.h  graphics_data.C  graphics_impl.C  graphics_impl.h  graphics_lib.C  graphics_lib.h  gutil.C  gutil.h  gutil_text.C  macglutfix.m  reduce_lib.C  static_graphics.C  texture.C  tgalib.C  tgalib.h  txf_util.h  windows_opengl.C
trunk/client/: CMakeLists.txt  Makefile.am  Makefile.curl.am  Makefile.linux  acct_mgr.C  acct_mgr.h  acct_setup.C  acct_setup.h  app.C  app.h  app_control.C  app_graphics.C  app_start.C  app_stats_mac.C  auto_update.C  auto_update.h  check_security.C  client_msgs.C  client_msgs.h  client_state.C  client_state.h  client_types.C  client_types.h  cpu_benchmark.h  cpu_sched.C  cs_account.C  cs_apps.C  cs_benchmark.C  cs_cmdline.C  cs_files.C  cs_platforms.C  cs_prefs.C  cs_scheduler.C  cs_statefile.C  cs_trickle.C  dhrystone.h  file_names.C  file_names.h  file_xfer.C  file_xfer.h  (+35 more)
trunk/clientgui/: AccountInfoPage.cpp  AccountInfoPage.h  AccountKeyPage.h  AccountManagerInfoPage.h  AccountManagerProcessingPage.cpp  AccountManagerPropertiesPage.cpp  AccountManagerPropertiesPage.h  AdvancedFrame.cpp  AdvancedFrame.h  AlreadyAttachedPage.cpp  AlreadyExistsPage.cpp  BOINCBaseFrame.cpp  BOINCBaseFrame.h  BOINCBaseView.cpp  BOINCBaseView.h  BOINCBaseWizard.cpp  BOINCBaseWizard.h  BOINCClientManager.cpp  BOINCClientManager.h  BOINCDialupManager.cpp  BOINCGUIApp.cpp  BOINCGUIApp.h  BOINCGUIApp.rc  BOINCListCtrl.cpp  BOINCListCtrl.h  BOINCTaskBar.cpp  BOINCTaskBar.h  BOINCTaskCtrl.cpp  BOINCTaskCtrl.h  BOINCWizards.h  BuildLayout.cpp  BuildLayout.h  CMakeLists.txt  CompletionPage.cpp  CompletionPage.h  DlgAbout.cpp  DlgAbout.h  DlgAdvPreferences.cpp  DlgAdvPreferences.h  DlgAdvPreferencesBase.cpp  (+80 more)
trunk/clientlib/: CMakeLists.txt
trunk/clientscr/: boinc_ss.h  boinc_ss.rc  mac_saver_module.cpp  screensaver.cpp  screensaver_win.cpp  (+1 more)
(+1433 files in other folders)
