macro(synec_add_test name)
    include_directories(${UNITTESTPP_INCLUDE_DIR})
    add_executable(${name} ${ARGN})
    target_link_libraries(${name} synectest)
    add_test(NAME ${name} COMMAND ${name})
endmacro(synec_add_test)

include_directories(${UNITTESTPP_INCLUDE_DIR})
add_library(synectest STATIC EXCLUDE_FROM_ALL TestRunner.cpp Util.cpp)
target_link_libraries(synectest ${UNITTESTPP_LIBRARY})
